--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">Sunshine</string>
+    <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
 
 </resources>
