--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,19 +8,24 @@
     <string name="title_activity_detail">DetailActivity</string>
     <string name="title_activity_settings">Settings</string>
 
+    <string name="str_celsius_label">Celsius</string>
+    <string name="str_celsius_key" translatable="false">celsius</string>
+    <string name="str_fahrenheit_label">Fahrenheit</string>
+    <string name="str_fahrenheit_key">fahrenheit</string>
+
     <string name="pref_location_label">Location</string>
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_default" translatable="false">94043</string>
 
     <string name="pref_units_label">Temperature Units</string>
-    <string name="pref_units_key">units</string>
+    <string name="pref_units_key" translatable="false">units</string>
     <string-array name="pref_units_entries">
-        <item>Celsius</item>
-        <item>Fahrenheit</item>
+        <item>@string/str_celsius_label</item>
+        <item>@string/str_fahrenheit_label</item>
     </string-array>
     <string-array name="pref_units_values" translatable="false">
-        <item>celsius</item>
-        <item>fahrenheit</item>
+        <item>@string/str_celsius_key</item>
+        <item>@string/str_fahrenheit_key</item>
     </string-array>
     <string name="pref_units_default" translatable="false">celsius</string>
 
