--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Sunshine</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
     <string name="action_view_map_location">View on map</string>
     <string name="hello_world">Hello, world!</string>
     <string name="title_activity_detail">DetailActivity</string>
