--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
 
   <string name="pref_units_label">Temperature Units</string>
   <string name="pref_units_key" translatable="false">units</string>
-  <string name="pref_units_default" translatable="false">celsius</string>
+  <string name="pref_units_default"
+      translatable="false">@string/str_celsius_key</string>
 
 </resources>
